--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@
   </div>
 </section>
 
+<section id="process" class="process-section">
+    <h2 data-key="processTitle">Notre Processus</h2>
+    <div class="process-container">
+        <div class="process-step">
+            <div class="step-icon"><i class="fas fa-comments"></i></div>
+            <h3 data-key="step1Title">1. Consultation</h3>
+            <p data-key="step1Desc">Discussion de vos besoins et visite du site.</p>
+        </div>
+        <div class="process-step">
+            <div class="step-icon"><i class="fas fa-file-invoice-dollar"></i></div>
+            <h3 data-key="step2Title">2. Étude & Devis</h3>
+            <p data-key="step2Desc">Proposition technique et estimation détaillée.</p>
+        </div>
+        <div class="process-step">
+            <div class="step-icon"><i class="fas fa-hard-hat"></i></div>
+            <h3 data-key="step3Title">3. Réalisation</h3>
+            <p data-key="step3Desc">Exécution des travaux avec suivi rigoureux.</p>
+        </div>
+        <div class="process-step">
+            <div class="step-icon"><i class="fas fa-key"></i></div>
+            <h3 data-key="step4Title">4. Livraison</h3>
+            <p data-key="step4Desc">Réception du chantier et remise des clés.</p>
+        </div>
+    </div>
+</section>
 <section id="projects" class="projects">
   <h2 data-key="projects">Nos Projets</h2>
   <div class="project-grid">
@@ -82,6 +107,7 @@
             <p data-key="proj1Desc">Rénovation complète d'une villa à Bouskoura. Modernisation de la façade, réaménagement intérieur et piscine.</p>
         </div>
     </div>
+
     <div class="project-card">
         <div class="image-wrapper">
             <img src="images/apt-finish.png" alt="Apartment">
